# fern-mcp

./: Cargo.toml  Makefile  README.md  install.ps1  install.sh
.github/workflows/: release.yml
installers/: fern-mcp-installer-osx.sh  fern-mcp-installer-win.ps1
resources/: icon.icns  instructions.txt
scripts/: dmgbuild.py  install.sh  release.sh
src/: main.rs
