[package]
name = "fern-mcp-installer"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
rfd = "0.13"

[package.metadata.bundle]
name = "Fern MCP Installer"
identifier = "com.meetfern.installer"
version = "0.1.0"
short_description = "Installs Fern MCP bridge"
icon = ["resources/icon.icns"]